--- a/TASSAndroidUI/app/src/main/res/values/colors.xml
+++ b/TASSAndroidUI/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="textColorPrimary">#ffffff</color>
+    <color name="textColorPrimary">#FFFFFF</color>
     <color name="colorPrimary">#01172C</color>
     <color name="colorPrimaryDark">#01172C</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#FFFFFF</color>
     <color name="colorBannerBack">#01172C</color>
 </resources>
